--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,6 @@ deps =
 commands =
     # NOTE: you can run any command line tool here - not just tests
     pytest tests
-    flake8 src
-    pylint src
-    mypy src
+    flake8 src tests
+    pylint src tests
+    mypy src tests
