--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ keywords = ["setenvironment"]
 license = { text = "BSD 3-Clause License" }
 classifiers = ["Programming Language :: Python :: 3"]
 dependencies = [
-
+  "pywin32; sys_platform == 'win32'"
 ]
 # Change this with the version number bump.
 # Also make the change in zcmds/version.py
