adds post install script

--- a/.github/workflows/push_win.yml
+++ b/.github/workflows/push_win.yml
@@ -30,3 +30,6 @@ jobs:
     - name: Run Test
       run: |
         pytest tests
+    - name: Run Post install
+      run: |
+        cd tests && python post_install.py
