system paths still working

--- a/.github/workflows/push_ubuntu.yml
+++ b/.github/workflows/push_ubuntu.yml
@@ -31,3 +31,5 @@ jobs:
     - name: Run Tests
       run: |
         pytest tests
+    - name: Run System paths still working
+      run: python tests/post_install.py
