--- a/.github/workflows/push_macos.yml
+++ b/.github/workflows/push_macos.yml
@@ -30,3 +30,5 @@ jobs:
     - name: Run Tests
       run: |
         pytest tests
+    - name: Run System paths still working
+      run: python tests/post_install.py
