--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,7 @@ requires-python = ">=3.7"
 keywords = ["setenvironment"]
 license = { text = "BSD 3-Clause License" }
 classifiers = ["Programming Language :: Python :: 3"]
-dependencies = [
-  "pywin32; sys_platform == 'win32'"
-]
+dependencies = ["pywin32; sys_platform == 'win32'"]
 # Change this with the version number bump.
 # Also make the change in zcmds/version.py
 version = "1.1.1"
