--- a/.github/workflows/push_ubuntu.yml
+++ b/.github/workflows/push_ubuntu.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         sudo apt-get install libasound2-dev
-        python -m pip install .
+        python -m pip install -e .
         python -m pip install pytest
     - name: Run Tests
       run: |
