--- a/.github/workflows/push_win.yml
+++ b/.github/workflows/push_win.yml
@@ -29,5 +29,7 @@ jobs:
         python -m pip install pytest
     - name: Run Tests
       run: pytest tests
+    - name: which git
+      run: which git
     - name: Run System paths still working
       run: python tests/post_install.py
