adds setenvironment and fixes a empty path from being written out to the file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,3 +21,4 @@ version = "1.2.0"
 "setenvironment_unset" = "setenvironment.cli:unsetenv"
 "setenvironment_addpath" = "setenvironment.cli:addpath"
 "setenvironment_removepath" = "setenvironment.cli:removepath"
+"setenvironment" = "setenvironment.main:main"
