--- a/.github/workflows/push_macos.yml
+++ b/.github/workflows/push_macos.yml
@@ -26,9 +26,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install -e .
-        python -m pip install pytest
     - name: Run Tests
       run: |
-        pytest tests
+        ./tests.sh
     - name: Run System paths still working
       run: python tests/post_install.py
