--- a/.github/workflows/push_win.yml
+++ b/.github/workflows/push_win.yml
@@ -28,7 +28,8 @@ jobs:
         python -m pip install -e .
         python -m pip install pytest
     - name: Run Tests
-      run: pytest tests
+      run: |
+        ./tests.sh
     - name: which git
       run: which git
     - name: Run System paths still working
