--- a/.github/workflows/push_macos.yml
+++ b/.github/workflows/push_macos.yml
@@ -28,6 +28,6 @@ jobs:
         python -m pip install -e .
     - name: Run Tests
       run: |
-        python -m unittest discover tests
+        python -m unittest discover tests -vv
     - name: Run System paths still working
       run: python tests/post_install.py
