--- a/.github/workflows/push_win.yml
+++ b/.github/workflows/push_win.yml
@@ -29,7 +29,7 @@ jobs:
         python -m pip install pytest
     - name: Run Tests
       run: |
-        python -m unittest discover tests
+        python -m unittest discover tests -vv
     - name: which git
       run: which git
     - name: Run System paths still working
