--- a/.github/workflows/push_ubuntu.yml
+++ b/.github/workflows/push_ubuntu.yml
@@ -1,5 +1,10 @@
 name: Ubuntu_Tests
 
+# Directs GitHub to run tests using ~/.bashrc
+defaults:
+    run:
+      shell: bash -ieo pipefail {0}
+
 on: [push]
 
 jobs:
