--- a/.github/workflows/push_ubuntu.yml
+++ b/.github/workflows/push_ubuntu.yml
@@ -30,9 +30,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        python -m pip install pytest
         python -m pip install -e .
     - name: Run Tests
       run: |
-        python -m unittest discover tests -vv
+        pytest
     - name: Run System paths still working
       run: python tests/post_install.py
