--- a/.github/workflows/push_win.yml
+++ b/.github/workflows/push_win.yml
@@ -11,26 +11,20 @@ jobs:
         os: [windows-latest]
     steps:
     - uses: actions/checkout@v3
+    - name: Install uv
+      uses: astral-sh/setup-uv@v4
+      with:
+        enable-cache: true
+        cache-dependency-glob: "pyproject.toml"
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-    - uses: actions/cache@v3
-      name: Configure pip caching
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install -e .
-        python -m pip install pytest
+      run: uv sync --all-extras
     - name: Run Tests
-      run: |
-        pytest
+      run: uv run test
     - name: which git
       run: which git
     - name: Run System paths still working
-      run: python tests/post_install.py
+      run: uv run python tests/post_install.py
